fixed issues with static data

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -135,25 +135,25 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "01e5fceb-8250-4a93-a941-1ae664021415",
+     "nuid": "8082f559-071c-4d33-b721-d9f1106d5fdb",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "BOOK = \"AVT\"\n",
-    "\n",
-    "def get_static_data(BOOK: str) -> tuple[None]:\n",
+    "def get_static_data(\n",
+    "    BOOK: str,\n",
+    ") -> tuple[pd.DataFrame, str, str, str, list[str], str, str,]:\n",
     "    \"\"\"\n",
     "    Retrieves and processes static data based on a specified book of business.\n",
     "\n",
-    "    This function is designed to handle different books of business, each identified by a unique name. \n",
-    "    Based on the input book name, it loads claim data from a specified location, performs necessary \n",
+    "    This function is designed to handle different books of business, each identified by a unique name.\n",
+    "    Based on the input book name, it loads claim data from a specified location, performs necessary\n",
     "    data transformations, and sets various parameters relevant to the data analysis.\n",
     "\n",
     "    Args:\n",
-    "        BOOK (str): A string identifier for the book of business. \n",
+    "        BOOK (str): A string identifier for the book of business.\n",
     "                    Possible values include \"King\", \"Park\", and \"AVT\".\n",
     "\n",
     "    Returns:\n",
@@ -172,21 +172,21 @@
     "        - For specific books, additional filtering or processing steps are applied to the DataFrame.\n",
     "    \"\"\"\n",
     "    if BOOK == \"King\":\n",
-    "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kmh_BOOK_10_04_23.xlsx\"\n",
+    "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kmh_book_10_04_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
     "            columns={\n",
     "                \"OS_loss\": \"OS_Loss\",\n",
     "            }\n",
     "        )\n",
     "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
-    "        Y_AXIS_DATE_FIELD = \"Acc_Date\"\n",
+    "        Y_AXIS_DATE_FIELD = \"Acc_Date\" # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Paid_Loss, Paid_ALE, OS_Loss, OS_ALE, Total_Paid, Total_OS, Total_Incurred, Total_ALE, Total_Loss\n",
+    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total Paid, Total Incurred, TOTAL ALAE, Total Loss\n",
     "        TIME_INTERVAL = \"quarterly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    elif BOOK == \"Park\":\n",
-    "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kp_BOOK_10_05_23.xlsx\"\n",
+    "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kp_book_10_05_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
     "            columns={\n",
     "                \"OS_loss\": \"OS_Loss\",\n",
@@ -195,14 +195,14 @@
     "        FULL_CLAIMS_DF = FULL_CLAIMS_DF.loc[FULL_CLAIMS_DF[\"ASL\"] == 5.1]\n",
     "\n",
     "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
-    "        Y_AXIS_DATE_FIELD = \"Acc_Date\"\n",
+    "        Y_AXIS_DATE_FIELD = \"Acc_Date\" # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Incurred\"  # Paid_Loss, Paid_ALE, OS_Loss, OS_ALE, Total_Paid, Total_OS, Total_Incurred, Total_ALE, Total_Loss\n",
+    "        TARGET_LOSS_METRIC = \"Total_Incurred\"  # Total Paid, Total Incurred, TOTAL ALAE, Total Loss\n",
     "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    elif BOOK == \"AVT\":\n",
-    "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/avt_BOOK_10_05_23.xlsx\"\n",
+    "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/avt_book_10_05_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
     "            columns={\n",
     "                \"acc_date\": \"Acc_Date\",\n",
@@ -219,10 +219,10 @@
     "        FULL_CLAIMS_DF = FULL_CLAIMS_DF.loc[FULL_CLAIMS_DF[\"NISS_ASL\"] == 51.0]\n",
     "\n",
     "        X_AXIS_DATE_FIELD = \"Accounting_Date\"  # accounting date\n",
-    "        Y_AXIS_DATE_FIELD = \"Acc_Date\"  # accident date, report date, policy date\n",
+    "        Y_AXIS_DATE_FIELD = \"Acc_Date\"  # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Paid_Loss, Paid_ALE, OS_Loss, OS_ALE, Total_Paid, Total_OS, Total_Incurred, Total_ALE, Total_Loss\n",
+    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total Paid, Total Incurred, TOTAL ALAE, Total Loss\n",
     "        TIME_INTERVAL = \"monthly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    return (\n",
@@ -934,15 +934,19 @@
    },
    "outputs": [],
    "source": [
-    "def run(\n",
-    "    FULL_CLAIMS_DF: pd.DataFrame,\n",
-    "    X_AXIS_DATE_FIELD: str,\n",
-    "    Y_AXIS_DATE_FIELD: str,\n",
-    "    CLAIM_NUMBER_COLUMN: str,\n",
-    "    LOSS_COLUMNS: str,\n",
-    "    TARGET_LOSS_METRIC: str,\n",
-    "    TIME_INTERVAL: str,\n",
-    ") -> tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]:\n",
+    "def run() -> tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]:\n",
+    "    BOOK = \"King\"\n",
+    "\n",
+    "    (\n",
+    "        FULL_CLAIMS_DF,\n",
+    "        X_AXIS_DATE_FIELD,\n",
+    "        Y_AXIS_DATE_FIELD,\n",
+    "        CLAIM_NUMBER_COLUMN,\n",
+    "        LOSS_COLUMNS,\n",
+    "        TARGET_LOSS_METRIC,\n",
+    "        TIME_INTERVAL,\n",
+    "    ) = get_static_data(BOOK)\n",
+    "\n",
     "    (claims_triangle, claims_triangle_ldf) = get_loss_triangles_from_parameters(\n",
     "        FULL_CLAIMS_DF,\n",
     "        X_AXIS_DATE_FIELD,\n",
@@ -977,35 +981,7 @@
    },
    "outputs": [],
    "source": [
-    "(claims_triangle, claims_triangle_ldf, ldf_averages_df) = run(\n",
-    "    FULL_CLAIMS_DF,\n",
-    "    X_AXIS_DATE_FIELD,\n",
-    "    Y_AXIS_DATE_FIELD,\n",
-    "    CLAIM_NUMBER_COLUMN,\n",
-    "    LOSS_COLUMNS,\n",
-    "    TARGET_LOSS_METRIC,\n",
-    "    TIME_INTERVAL,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "f372fe98-2c65-4dc7-8384-4a4d0f8a7e67",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ldf_averages_df.display()"
+    "(claims_triangle, claims_triangle_ldf, ldf_averages_df) = run()"
    ]
   }
  ],
