Removed debug function

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -39,42 +39,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5e023ff7-00db-48f1-8872-7a934bcdde17",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def debug(func):\n",
-    "    \"\"\"A decorator that prints information about the function call for debugging purposes.\"\"\"\n",
-    "    \n",
-    "    @functools.wraps(func)\n",
-    "    def wrapper(*args, **kwargs):\n",
-    "        args_repr = [repr(a) for a in args]                     \n",
-    "        kwargs_repr = [f\"{k}={v!r}\" for k, v in kwargs.items()]  \n",
-    "        signature = \", \".join(args_repr + kwargs_repr)           \n",
-    "        print(f\"Calling {func.__name__}({signature})\")\n",
-    "        \n",
-    "        # Call the function\n",
-    "        result = func(*args, **kwargs)\n",
-    "        \n",
-    "        print(f\"{func.__name__!r} returned {result!r}\")           \n",
-    "        return result\n",
-    "    \n",
-    "    return wrapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "a68832bf-393d-4897-a958-8b6e5f37237f",
      "showTitle": false,
      "title": ""
@@ -135,6 +99,28 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "0217d4f7-3d14-48af-b753-3c3b39d88d05",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "claims_df = pd.read_excel(\"/dbfs/FileStore/ID/avt_book_10_05_23.xlsx\")\n",
+    "\n",
+    "claims_df.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "8082f559-071c-4d33-b721-d9f1106d5fdb",
      "showTitle": false,
      "title": ""
@@ -145,32 +131,6 @@
     "def get_static_data(\n",
     "    BOOK: str,\n",
     ") -> tuple[pd.DataFrame, str, str, str, list[str], str, str,]:\n",
-    "    \"\"\"\n",
-    "    Retrieves and processes static data based on a specified book of business.\n",
-    "\n",
-    "    This function is designed to handle different books of business, each identified by a unique name.\n",
-    "    Based on the input book name, it loads claim data from a specified location, performs necessary\n",
-    "    data transformations, and sets various parameters relevant to the data analysis.\n",
-    "\n",
-    "    Args:\n",
-    "        BOOK (str): A string identifier for the book of business.\n",
-    "                    Possible values include \"King\", \"Park\", and \"AVT\".\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: A tuple containing the following elements in order:\n",
-    "            - FULL_CLAIMS_DF (DataFrame): The DataFrame containing the loaded and processed claims data.\n",
-    "            - X_AXIS_DATE_FIELD (str): The name of the column to be used as the X-axis date field.\n",
-    "            - Y_AXIS_DATE_FIELD (str): The name of the column to be used as the Y-axis date field.\n",
-    "            - CLAIM_NUMBER_COLUMN (str): The name of the column representing the claim number.\n",
-    "            - LOSS_COLUMNS (list): A list of columns related to loss data.\n",
-    "            - TARGET_LOSS_METRIC (str): The target loss metric to be analyzed.\n",
-    "            - TIME_INTERVAL (str): The time interval for analysis (e.g., \"quarterly\", \"monthly\", \"yearly\").\n",
-    "\n",
-    "    Note:\n",
-    "        - The function expects the data to be in specific file paths and formats for each book.\n",
-    "        - The columns of the DataFrame are renamed for consistency across different books.\n",
-    "        - For specific books, additional filtering or processing steps are applied to the DataFrame.\n",
-    "    \"\"\"\n",
     "    if BOOK == \"King\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kmh_book_10_04_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
@@ -182,8 +142,8 @@
     "        Y_AXIS_DATE_FIELD = \"Acc_Date\" # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total Paid, Total Incurred, TOTAL ALAE, Total Loss\n",
-    "        TIME_INTERVAL = \"quarterly\"  # quarterly, monthly, yearly\n",
+    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total_Paid, Total_Incurred, TOTAL_ALAE, Total_Loss\n",
+    "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    elif BOOK == \"Park\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kp_book_10_05_23.xlsx\"\n",
@@ -198,7 +158,7 @@
     "        Y_AXIS_DATE_FIELD = \"Acc_Date\" # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Incurred\"  # Total Paid, Total Incurred, TOTAL ALAE, Total Loss\n",
+    "        TARGET_LOSS_METRIC = \"Total_Incurred\"  # Total_Paid, Total_Incurred, TOTAL_ALAE, Total_Loss\n",
     "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    elif BOOK == \"AVT\":\n",
@@ -222,8 +182,8 @@
     "        Y_AXIS_DATE_FIELD = \"Acc_Date\"  # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total Paid, Total Incurred, TOTAL ALAE, Total Loss\n",
-    "        TIME_INTERVAL = \"monthly\"  # quarterly, monthly, yearly\n",
+    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total_Paid, Total_Incurred, TOTAL_ALAE, Total_Loss\n",
+    "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    return (\n",
     "        FULL_CLAIMS_DF,\n",
@@ -982,6 +942,26 @@
    "outputs": [],
    "source": [
     "(claims_triangle, claims_triangle_ldf, ldf_averages_df) = run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7df11bfa-0c92-4783-b80c-be6b1be85397",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "claims_triangle_ldf.display()"
    ]
   }
  ],
