got looping working

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -30,6 +30,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f46d444a-b71d-4d27-9865-fa3e6797cbcf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "Main User Interface: https://ftgdev.service-now.com/x/fof/loss-triangles-2/loss-triangles-page"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -99,28 +117,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "0217d4f7-3d14-48af-b753-3c3b39d88d05",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "claims_df = pd.read_excel(\"/dbfs/FileStore/ID/avt_book_10_05_23.xlsx\")\n",
-    "\n",
-    "claims_df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "8082f559-071c-4d33-b721-d9f1106d5fdb",
      "showTitle": false,
      "title": ""
@@ -130,7 +126,7 @@
    "source": [
     "def get_static_data(\n",
     "    BOOK: str,\n",
-    ") -> tuple[pd.DataFrame, str, str, str, list[str], str, str,]:\n",
+    ") -> tuple[pd.DataFrame, str, str, list[str],]:\n",
     "    if BOOK == \"King\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kmh_book_10_04_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
@@ -139,11 +135,8 @@
     "            }\n",
     "        )\n",
     "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
-    "        Y_AXIS_DATE_FIELD = \"Acc_Date\" # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total_Paid, Total_Incurred, TOTAL_ALAE, Total_Loss\n",
-    "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    elif BOOK == \"Park\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kp_book_10_05_23.xlsx\"\n",
@@ -155,17 +148,16 @@
     "        FULL_CLAIMS_DF = FULL_CLAIMS_DF.loc[FULL_CLAIMS_DF[\"ASL\"] == 5.1]\n",
     "\n",
     "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
-    "        Y_AXIS_DATE_FIELD = \"Acc_Date\" # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Incurred\"  # Total_Paid, Total_Incurred, TOTAL_ALAE, Total_Loss\n",
-    "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    elif BOOK == \"AVT\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/avt_book_10_05_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
     "            columns={\n",
     "                \"acc_date\": \"Acc_Date\",\n",
+    "                \"policy_eff_date\": \"Policy_Date\",\n",
+    "                \"Reporting_date\": \"Report_Date\",\n",
     "                \"accounting_date\": \"Accounting_Date\",\n",
     "                \"claim_number\": \"claim_nbr\",\n",
     "                \"paid_loss\": \"Paid_Loss\",\n",
@@ -179,20 +171,14 @@
     "        FULL_CLAIMS_DF = FULL_CLAIMS_DF.loc[FULL_CLAIMS_DF[\"NISS_ASL\"] == 51.0]\n",
     "\n",
     "        X_AXIS_DATE_FIELD = \"Accounting_Date\"  # accounting date\n",
-    "        Y_AXIS_DATE_FIELD = \"Acc_Date\"  # accident date, policy date, report date, treaty date\n",
     "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
     "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "        TARGET_LOSS_METRIC = \"Total_Paid\"  # Total_Paid, Total_Incurred, TOTAL_ALAE, Total_Loss\n",
-    "        TIME_INTERVAL = \"yearly\"  # quarterly, monthly, yearly\n",
     "\n",
     "    return (\n",
     "        FULL_CLAIMS_DF,\n",
     "        X_AXIS_DATE_FIELD,\n",
-    "        Y_AXIS_DATE_FIELD,\n",
     "        CLAIM_NUMBER_COLUMN,\n",
     "        LOSS_COLUMNS,\n",
-    "        TARGET_LOSS_METRIC,\n",
-    "        TIME_INTERVAL,\n",
     "    )"
    ]
   },
@@ -284,6 +270,7 @@
     "    CLAIM_NUMBER_COLUMN: str = \"claim_nbr\",\n",
     "    LOSS_COLUMNS: list[str] = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"],\n",
     "    time_interval_axis_mapping: dict = {},\n",
+    "    X_AXIS_DATE_FIELD: str = \"\",\n",
     ") -> pd.DataFrame:\n",
     "    assert (\n",
     "        time_interval_axis_mapping != {}\n",
@@ -702,9 +689,7 @@
     "    def _update_insurance_totals(df: pd.DataFrame) -> pd.DataFrame:\n",
     "        df[\"Total_Paid\"] = df[\"Paid_Loss\"] + df[\"Paid_ALE\"]\n",
     "        df[\"Total_OS\"] = df[\"OS_Loss\"] + df[\"OS_ALE\"]\n",
-    "        df[\"Total_Incurred\"] = (\n",
-    "            df[\"Total_Paid\"] + df[\"Total_OS\"]\n",
-    "        )\n",
+    "        df[\"Total_Incurred\"] = df[\"Total_Paid\"] + df[\"Total_OS\"]\n",
     "        df[\"Total_ALE\"] = df[\"Paid_ALE\"] + df[\"OS_ALE\"]\n",
     "        df[\"Total_Loss\"] = df[\"Paid_Loss\"] + df[\"OS_Loss\"]\n",
     "        return df\n",
@@ -713,7 +698,11 @@
     "        df, X_AXIS_DATE_FIELD, Y_AXIS_DATE_FIELD, TIME_INTERVAL\n",
     "    )\n",
     "    claims_df = get_cumulative_metrics(\n",
-    "        claims_df, CLAIM_NUMBER_COLUMN, LOSS_COLUMNS, time_interval_axis_mapping\n",
+    "        claims_df,\n",
+    "        CLAIM_NUMBER_COLUMN,\n",
+    "        LOSS_COLUMNS,\n",
+    "        time_interval_axis_mapping,\n",
+    "        X_AXIS_DATE_FIELD,\n",
     "    )\n",
     "    claims_df = get_last_values_during_developed_period(\n",
     "        claims_df, CLAIM_NUMBER_COLUMN, LOSS_COLUMNS, time_interval_axis_mapping\n",
@@ -894,28 +883,41 @@
    },
    "outputs": [],
    "source": [
-    "def run() -> tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]:\n",
+    "def run(\n",
+    "    USE_STATIC_DATA: bool = True,\n",
+    ") -> tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]:\n",
     "    BOOK = \"King\"\n",
     "\n",
-    "    (\n",
-    "        FULL_CLAIMS_DF,\n",
-    "        X_AXIS_DATE_FIELD,\n",
-    "        Y_AXIS_DATE_FIELD,\n",
-    "        CLAIM_NUMBER_COLUMN,\n",
-    "        LOSS_COLUMNS,\n",
-    "        TARGET_LOSS_METRIC,\n",
-    "        TIME_INTERVAL,\n",
-    "    ) = get_static_data(BOOK)\n",
+    "    if USE_STATIC_DATA:\n",
+    "        (\n",
+    "            FULL_CLAIMS_DF,\n",
+    "            X_AXIS_DATE_FIELD,\n",
+    "            CLAIM_NUMBER_COLUMN,\n",
+    "            LOSS_COLUMNS,\n",
+    "        ) = get_static_data(BOOK)\n",
     "\n",
-    "    (claims_triangle, claims_triangle_ldf) = get_loss_triangles_from_parameters(\n",
-    "        FULL_CLAIMS_DF,\n",
-    "        X_AXIS_DATE_FIELD,\n",
-    "        Y_AXIS_DATE_FIELD,\n",
-    "        CLAIM_NUMBER_COLUMN,\n",
-    "        LOSS_COLUMNS,\n",
-    "        TARGET_LOSS_METRIC,\n",
-    "        TIME_INTERVAL,\n",
-    "    )\n",
+    "    Y_AXIS_DATE_FIELDS = [\n",
+    "        \"Acc_Date\",\n",
+    "        \"Policy_Date\",\n",
+    "        \"Report_Date\",\n",
+    "    ]  # \"Treaty_Date\" would not work here\n",
+    "    TARGET_LOSS_METRICS = [\"Total_Paid\", \"Total_Incurred\", \"Total_ALE\", \"Total_Loss\"]\n",
+    "    TIME_INTERVALS = [\"monthly\", \"quarterly\", \"yearly\"]\n",
+    "\n",
+    "    for combination in itertools.product(\n",
+    "        Y_AXIS_DATE_FIELDS, TARGET_LOSS_METRICS, TIME_INTERVALS\n",
+    "    ):\n",
+    "        (Y_AXIS_DATE_FIELD, TARGET_LOSS_METRIC, TIME_INTERVAL) = combination\n",
+    "\n",
+    "        (claims_triangle, claims_triangle_ldf) = get_loss_triangles_from_parameters(\n",
+    "            FULL_CLAIMS_DF,\n",
+    "            X_AXIS_DATE_FIELD,\n",
+    "            Y_AXIS_DATE_FIELD,\n",
+    "            CLAIM_NUMBER_COLUMN,\n",
+    "            LOSS_COLUMNS,\n",
+    "            TARGET_LOSS_METRIC,\n",
+    "            TIME_INTERVAL,\n",
+    "        )\n",
     "\n",
     "    ldf_averages_df = get_ldf_weighted_average_and_ftu(\n",
     "        claims_triangle, claims_triangle_ldf, TIME_INTERVAL\n",
@@ -954,7 +956,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "7df11bfa-0c92-4783-b80c-be6b1be85397",
+     "nuid": "7756b9e4-7fe6-4478-aa75-25246fd75bd6",
      "showTitle": false,
      "title": ""
     }
