Polished 48 options output

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -24,6 +24,7 @@
     "# Data Processing\n",
     "import itertools\n",
     "import functools\n",
+    "from functools import lru_cache\n",
     "\n",
     "# Visualization\n",
     "from IPython.display import display, HTML, Markdown"
@@ -64,6 +65,7 @@
    },
    "outputs": [],
    "source": [
+    "@lru_cache(maxsize=None)\n",
     "def load_data(\n",
     "    CLAIMS_LOCATION: str = \"\",\n",
     ") -> pd.DataFrame:\n",
@@ -885,10 +887,22 @@
    "source": [
     "def run(\n",
     "    USE_STATIC_DATA: bool = True,\n",
-    ") -> tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]:\n",
-    "    BOOK = \"King\"\n",
-    "\n",
+    "    Y_AXIS_DATE_FIELDS: list[str] = [\n",
+    "        \"Acc_Date\",\n",
+    "        # \"Policy_Date\",\n",
+    "        # \"Report_Date\",\n",
+    "        # \"Treaty_Date\",\n",
+    "    ],\n",
+    "    TARGET_LOSS_METRICS: list[str] = [\n",
+    "        \"Total_Paid\",\n",
+    "        \"Total_Incurred\",\n",
+    "        \"Total_ALE\",\n",
+    "        \"Total_Loss\",\n",
+    "    ],\n",
+    "    TIME_INTERVALS: list[str] = [\"monthly\", \"quarterly\", \"yearly\"],\n",
+    ") -> list[tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]]:\n",
     "    if USE_STATIC_DATA:\n",
+    "        BOOK = \"King\"\n",
     "        (\n",
     "            FULL_CLAIMS_DF,\n",
     "            X_AXIS_DATE_FIELD,\n",
@@ -896,14 +910,7 @@
     "            LOSS_COLUMNS,\n",
     "        ) = get_static_data(BOOK)\n",
     "\n",
-    "    Y_AXIS_DATE_FIELDS = [\n",
-    "        \"Acc_Date\",\n",
-    "        \"Policy_Date\",\n",
-    "        \"Report_Date\",\n",
-    "    ]  # \"Treaty_Date\" would not work here\n",
-    "    TARGET_LOSS_METRICS = [\"Total_Paid\", \"Total_Incurred\", \"Total_ALE\", \"Total_Loss\"]\n",
-    "    TIME_INTERVALS = [\"monthly\", \"quarterly\", \"yearly\"]\n",
-    "\n",
+    "    triangle_outputs = []\n",
     "    for combination in itertools.product(\n",
     "        Y_AXIS_DATE_FIELDS, TARGET_LOSS_METRICS, TIME_INTERVALS\n",
     "    ):\n",
@@ -919,11 +926,12 @@
     "            TIME_INTERVAL,\n",
     "        )\n",
     "\n",
-    "    ldf_averages_df = get_ldf_weighted_average_and_ftu(\n",
-    "        claims_triangle, claims_triangle_ldf, TIME_INTERVAL\n",
-    "    )\n",
+    "        ldf_averages_df = get_ldf_weighted_average_and_ftu(\n",
+    "            claims_triangle, claims_triangle_ldf, TIME_INTERVAL\n",
+    "        )\n",
+    "        triangle_outputs.append((claims_triangle, claims_triangle_ldf, ldf_averages_df))\n",
     "\n",
-    "    return (claims_triangle, claims_triangle_ldf, ldf_averages_df)"
+    "    return triangle_outputs"
    ]
   },
   {
@@ -943,27 +951,7 @@
    },
    "outputs": [],
    "source": [
-    "(claims_triangle, claims_triangle_ldf, ldf_averages_df) = run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7756b9e4-7fe6-4478-aa75-25246fd75bd6",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "claims_triangle_ldf.display()"
+    "triangle_outputs = run()"
    ]
   }
  ],
