setup Excel output

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -26,6 +26,9 @@
     "import functools\n",
     "from functools import lru_cache\n",
     "\n",
+    "# Output to Excel\n",
+    "from shutil import copyfile\n",
+    "\n",
     "# Visualization\n",
     "from IPython.display import display, HTML, Markdown"
    ]
@@ -900,6 +903,8 @@
     "        \"Total_Loss\",\n",
     "    ],\n",
     "    TIME_INTERVALS: list[str] = [\"monthly\", \"quarterly\", \"yearly\"],\n",
+    "    LOCAL_FILEPATH: str = \"/tmp/ldf_output_permutation_test_tempfile.xlsx\",\n",
+    "    OUTPUT_DBFS_FILEPATH: str = \"/dbfs/mnt/datascience/ldf_output_permutation_test.xlsx\",\n",
     ") -> list[tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]]:\n",
     "    if USE_STATIC_DATA:\n",
     "        BOOK = \"King\"\n",
@@ -911,25 +916,40 @@
     "        ) = get_static_data(BOOK)\n",
     "\n",
     "    triangle_outputs = []\n",
-    "    for combination in itertools.product(\n",
-    "        Y_AXIS_DATE_FIELDS, TARGET_LOSS_METRICS, TIME_INTERVALS\n",
-    "    ):\n",
-    "        (Y_AXIS_DATE_FIELD, TARGET_LOSS_METRIC, TIME_INTERVAL) = combination\n",
+    "    with pd.ExcelWriter(LOCAL_FILEPATH, engine=\"openpyxl\") as writer:\n",
+    "        for idx, combination in enumerate(itertools.product(\n",
+    "            Y_AXIS_DATE_FIELDS, TARGET_LOSS_METRICS, TIME_INTERVALS\n",
+    "        )):\n",
+    "            (Y_AXIS_DATE_FIELD, TARGET_LOSS_METRIC, TIME_INTERVAL) = combination\n",
     "\n",
-    "        (claims_triangle, claims_triangle_ldf) = get_loss_triangles_from_parameters(\n",
-    "            FULL_CLAIMS_DF,\n",
-    "            X_AXIS_DATE_FIELD,\n",
-    "            Y_AXIS_DATE_FIELD,\n",
-    "            CLAIM_NUMBER_COLUMN,\n",
-    "            LOSS_COLUMNS,\n",
-    "            TARGET_LOSS_METRIC,\n",
-    "            TIME_INTERVAL,\n",
-    "        )\n",
+    "            (claims_triangle, claims_triangle_ldf) = get_loss_triangles_from_parameters(\n",
+    "                FULL_CLAIMS_DF,\n",
+    "                X_AXIS_DATE_FIELD,\n",
+    "                Y_AXIS_DATE_FIELD,\n",
+    "                CLAIM_NUMBER_COLUMN,\n",
+    "                LOSS_COLUMNS,\n",
+    "                TARGET_LOSS_METRIC,\n",
+    "                TIME_INTERVAL,\n",
+    "            )\n",
     "\n",
-    "        ldf_averages_df = get_ldf_weighted_average_and_ftu(\n",
-    "            claims_triangle, claims_triangle_ldf, TIME_INTERVAL\n",
-    "        )\n",
-    "        triangle_outputs.append((claims_triangle, claims_triangle_ldf, ldf_averages_df))\n",
+    "            ldf_averages_df = get_ldf_weighted_average_and_ftu(\n",
+    "                claims_triangle, claims_triangle_ldf, TIME_INTERVAL\n",
+    "            )\n",
+    "\n",
+    "            triangle_outputs.append(\n",
+    "                (claims_triangle, claims_triangle_ldf, ldf_averages_df)\n",
+    "            )\n",
+    "\n",
+    "            combined_df = pd.concat(\n",
+    "                [claims_triangle, claims_triangle_ldf, ldf_averages_df],\n",
+    "                axis=1,\n",
+    "                keys=[\"claims_triangle\", \"claims_triangle_ldf\", \"ldf_averages_df\"],\n",
+    "            )\n",
+    "\n",
+    "            sheet_name = f\"comb_{idx}\"\n",
+    "            combined_df.to_excel(writer, sheet_name=sheet_name)\n",
+    "\n",
+    "    copyfile(LOCAL_FILEPATH, OUTPUT_DBFS_FILEPATH)\n",
     "\n",
     "    return triangle_outputs"
    ]
