--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -29,8 +29,20 @@
     "# Output to Excel\n",
     "from shutil import copyfile\n",
     "\n",
+    "# Miscellaneous\n",
+    "import time\n",
+    "\n",
     "# Visualization\n",
-    "from IPython.display import display, HTML, Markdown"
+    "from IPython.display import display, HTML, Markdown\n",
+    "\n",
+    "# Warning Suppression\n",
+    "import warnings\n",
+    "\n",
+    "# Suppress specific runtime warnings\n",
+    "warnings.filterwarnings('ignore', category=RuntimeWarning)\n",
+    "\n",
+    "# Suppress specific future warnings\n",
+    "warnings.filterwarnings('ignore', category=FutureWarning)"
    ]
   },
   {
@@ -61,6 +73,34 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "81587629-c768-4d08-af31-b8d74ee54ae7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def measure_runtime(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start_time = time.time()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        end_time = time.time()\n",
+    "        runtime = end_time - start_time\n",
+    "        print(f\"Runtime of {func.__name__}: {runtime:.4f} seconds\")\n",
+    "        return result\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "a68832bf-393d-4897-a958-8b6e5f37237f",
      "showTitle": false,
      "title": ""
@@ -69,6 +109,7 @@
    "outputs": [],
    "source": [
     "@lru_cache(maxsize=None)\n",
+    "@measure_runtime\n",
     "def load_data(\n",
     "    CLAIMS_LOCATION: str = \"\",\n",
     ") -> pd.DataFrame:\n",
@@ -103,9 +144,7 @@
     "            print(f\"Dataset was in {file_format.upper()} format.\")\n",
     "            return claims_df\n",
     "        except Exception as e:\n",
-    "            print(\n",
-    "                f\"Failed to load data in {file_format.upper()} format due to: {str(e)}\"\n",
-    "            )\n",
+    "            pass\n",
     "\n",
     "    raise ValueError(\n",
     "        \"Claims file is not in an accepted format of: Parquet, CSV, or Excel.\"\n",
@@ -129,9 +168,10 @@
    },
    "outputs": [],
    "source": [
+    "@measure_runtime\n",
     "def get_static_data(\n",
     "    BOOK: str,\n",
-    ") -> tuple[pd.DataFrame, str, str, list[str],]:\n",
+    ") -> pd.DataFrame:\n",
     "    if BOOK == \"King\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kmh_book_10_04_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
@@ -139,9 +179,6 @@
     "                \"OS_loss\": \"OS_Loss\",\n",
     "            }\n",
     "        )\n",
-    "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
-    "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
-    "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
     "\n",
     "    elif BOOK == \"Park\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/kp_book_10_05_23.xlsx\"\n",
@@ -151,10 +188,6 @@
     "            }\n",
     "        )\n",
     "        FULL_CLAIMS_DF = FULL_CLAIMS_DF.loc[FULL_CLAIMS_DF[\"ASL\"] == 5.1]\n",
-    "\n",
-    "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
-    "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
-    "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
     "\n",
     "    elif BOOK == \"AVT\":\n",
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/avt_book_10_05_23.xlsx\"\n",
@@ -175,16 +208,7 @@
     "        )\n",
     "        FULL_CLAIMS_DF = FULL_CLAIMS_DF.loc[FULL_CLAIMS_DF[\"NISS_ASL\"] == 51.0]\n",
     "\n",
-    "        X_AXIS_DATE_FIELD = \"Accounting_Date\"  # accounting date\n",
-    "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
-    "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
-    "\n",
-    "    return (\n",
-    "        FULL_CLAIMS_DF,\n",
-    "        X_AXIS_DATE_FIELD,\n",
-    "        CLAIM_NUMBER_COLUMN,\n",
-    "        LOSS_COLUMNS,\n",
-    "    )"
+    "    return FULL_CLAIMS_DF"
    ]
   },
   {
@@ -682,6 +706,7 @@
    },
    "outputs": [],
    "source": [
+    "@measure_runtime\n",
     "def get_loss_triangles_from_parameters(\n",
     "    df: pd.DataFrame,\n",
     "    X_AXIS_DATE_FIELD: str,\n",
@@ -761,6 +786,7 @@
    },
    "outputs": [],
    "source": [
+    "@measure_runtime\n",
     "def get_ldf_weighted_average_and_ftu(\n",
     "    df: pd.DataFrame,\n",
     "    df2: pd.DataFrame,\n",
@@ -906,14 +932,16 @@
     "    LOCAL_FILEPATH: str = \"/tmp/ldf_output_permutation_test_tempfile.xlsx\",\n",
     "    OUTPUT_DBFS_FILEPATH: str = \"/dbfs/mnt/datascience/ldf_output_permutation_test.xlsx\",\n",
     ") -> list[tuple[pd.DataFrame, pd.DataFrame, pd.DataFrame]]:\n",
+    "    # This condition will be deprecated when the unit tests are built\n",
     "    if USE_STATIC_DATA:\n",
+    "        # Unit Test Static Data\n",
     "        BOOK = \"King\"\n",
-    "        (\n",
-    "            FULL_CLAIMS_DF,\n",
-    "            X_AXIS_DATE_FIELD,\n",
-    "            CLAIM_NUMBER_COLUMN,\n",
-    "            LOSS_COLUMNS,\n",
-    "        ) = get_static_data(BOOK)\n",
+    "        FULL_CLAIMS_DF = get_static_data(BOOK)\n",
+    "\n",
+    "        # Mock Variables\n",
+    "        X_AXIS_DATE_FIELD = \"Accounting_Date\"\n",
+    "        CLAIM_NUMBER_COLUMN = \"claim_nbr\"\n",
+    "        LOSS_COLUMNS = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
     "\n",
     "    triangle_outputs = []\n",
     "    with pd.ExcelWriter(LOCAL_FILEPATH, engine=\"openpyxl\") as writer:\n",
