Read in .json hardcoded options

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -160,6 +160,70 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "2d91d90b-3d04-4ceb-be43-9549e3027f0a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def read_hardcoded_json() -> tuple[list[str], list[str], list[str]]:\n",
+    "    hardcoded_json_dict = {\n",
+    "        \"filters\": {\n",
+    "            \"program_filters\": {\n",
+    "                \"lines_of_business\": [\"Property\"],\n",
+    "                \"programs\": [\"AVT\", \"KMH\"],\n",
+    "            },\n",
+    "            \"claims_filters\": {\n",
+    "                \"date_min\": \"2020-10-01\",\n",
+    "                \"date_max\": \"2020-11-01\",\n",
+    "                \"claim_statuses\": [\"Open\"],\n",
+    "                \"lines_of_business\": [\"Property\"],\n",
+    "            },\n",
+    "        },\n",
+    "        \"options\": {\n",
+    "            \"date_types\": [\n",
+    "                \"accident_date\",\n",
+    "                \"policy_date\",\n",
+    "                \"treaty_date\",\n",
+    "                \"report_date\",\n",
+    "            ],\n",
+    "            \"time_intervals\": [\"monthly\", \"quarterly\", \"yearly\"],\n",
+    "            \"loss_types\": [\"total_paid\", \"total_incurred\", \"total_alae\", \"total_loss\"],\n",
+    "            \"export_data\": \"raw\",  # aggregated\n",
+    "        },\n",
+    "    }\n",
+    "\n",
+    "    Y_AXIS_DATE_FIELDS = hardcoded_json_dict[\"options\"][\"date_types\"]\n",
+    "    TARGET_LOSS_METRICS = hardcoded_json_dict[\"options\"][\"loss_types\"]\n",
+    "    TIME_INTERVALS = hardcoded_json_dict[\"options\"][\"time_intervals\"]\n",
+    "\n",
+    "    TARGET_LOSS_METRICS = [item.replace('alae', 'ALE') for item in TARGET_LOSS_METRICS]\n",
+    "\n",
+    "    def capitalize_words_in_list(string_list: list[str]) -> list[str]:\n",
+    "        capitalized_list = []\n",
+    "        for item in string_list:\n",
+    "            words = item.split(\"_\")\n",
+    "            capitalized_words = [word if word == \"ALE\" else word.capitalize() for word in words]\n",
+    "            capitalized_item = \"_\".join(capitalized_words)\n",
+    "            capitalized_list.append(capitalized_item)\n",
+    "        return capitalized_list\n",
+    "\n",
+    "    TARGET_LOSS_METRICS = capitalize_words_in_list(TARGET_LOSS_METRICS)\n",
+    "\n",
+    "    return (Y_AXIS_DATE_FIELDS[:1], TARGET_LOSS_METRICS, TIME_INTERVALS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "8082f559-071c-4d33-b721-d9f1106d5fdb",
      "showTitle": false,
      "title": ""
@@ -192,9 +256,9 @@
     "        CLAIMS_LOCATION = \"/dbfs/FileStore/ID/avt_book_10_05_23.xlsx\"\n",
     "        FULL_CLAIMS_DF = load_data(CLAIMS_LOCATION).rename(\n",
     "            columns={\n",
-    "                \"acc_date\": \"Acc_Date\",\n",
-    "                \"policy_eff_date\": \"Policy_Date\",\n",
-    "                \"Reporting_date\": \"Report_Date\",\n",
+    "                \"acc_date\": \"accident_date\",\n",
+    "                \"policy_eff_date\": \"policy_date\",\n",
+    "                \"Reporting_date\": \"report_date\",\n",
     "                \"accounting_date\": \"Accounting_Date\",\n",
     "                \"claim_number\": \"claim_nbr\",\n",
     "                \"paid_loss\": \"Paid_Loss\",\n",
@@ -916,10 +980,10 @@
     "def run(\n",
     "    USE_STATIC_DATA: bool = True,\n",
     "    Y_AXIS_DATE_FIELDS: list[str] = [\n",
-    "        \"Acc_Date\",\n",
-    "        # \"Policy_Date\",\n",
-    "        # \"Report_Date\",\n",
-    "        # \"Treaty_Date\",\n",
+    "        \"accident_date\",\n",
+    "        # \"policy_date\",\n",
+    "        # \"report_date\",\n",
+    "        # \"treaty_date\",\n",
     "    ],\n",
     "    TARGET_LOSS_METRICS: list[str] = [\n",
     "        \"Total_Paid\",\n",
@@ -934,7 +998,7 @@
     "    # This condition will be deprecated when the unit tests are built\n",
     "    if USE_STATIC_DATA:\n",
     "        # Unit Test Static Data\n",
-    "        BOOK = \"King\"\n",
+    "        BOOK = \"AVT\"\n",
     "        FULL_CLAIMS_DF = get_static_data(BOOK)\n",
     "\n",
     "        # Mock Variables\n",
@@ -998,7 +1062,13 @@
    },
    "outputs": [],
    "source": [
-    "triangle_outputs = run()"
+    "(Y_AXIS_DATE_FIELDS, TARGET_LOSS_METRICS, TIME_INTERVALS) = read_hardcoded_json()\n",
+    "\n",
+    "triangle_outputs = run(\n",
+    "    Y_AXIS_DATE_FIELDS=Y_AXIS_DATE_FIELDS,\n",
+    "    TARGET_LOSS_METRICS=TARGET_LOSS_METRICS,\n",
+    "    TIME_INTERVALS=TIME_INTERVALS,\n",
+    ")"
    ]
   }
  ],
