--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -172,24 +172,37 @@
     "        \"filters\": {\n",
     "            \"program_filters\": {\n",
     "                \"lines_of_business\": [\"Property\"],\n",
-    "                \"programs\": [\"AVT\", \"KMH\"],\n",
+    "                \"programs\": [\n",
+    "                    # \"AVT\",\n",
+    "                    \"KMH\",\n",
+    "                    # \"KCM\"\n",
+    "                ],\n",
     "            },\n",
     "            \"claims_filters\": {\n",
-    "                \"date_min\": \"2020-10-01\",\n",
-    "                \"date_max\": \"2020-11-01\",\n",
+    "                \"date_min\": \"2000-01-01\",\n",
+    "                \"date_max\": \"2030-01-01\",\n",
     "                \"claim_statuses\": [\"Open\"],\n",
     "                \"lines_of_business\": [\"Property\"],\n",
     "            },\n",
     "        },\n",
     "        \"options\": {\n",
     "            \"date_types\": [\n",
-    "                \"accident_date\",\n",
-    "                \"policy_date\",\n",
-    "                \"treaty_date\",\n",
+    "                # \"accident_date\",\n",
+    "                # \"policy_date\",\n",
+    "                # \"treaty_date\",\n",
     "                \"report_date\",\n",
     "            ],\n",
-    "            \"time_intervals\": [\"monthly\", \"quarterly\", \"yearly\"],\n",
-    "            \"loss_types\": [\"total_paid\", \"total_incurred\", \"total_alae\", \"total_loss\"],\n",
+    "            \"time_intervals\": [\n",
+    "                \"monthly\",\n",
+    "                # \"quarterly\",\n",
+    "                # \"yearly\"\n",
+    "            ],\n",
+    "            \"loss_types\": [\n",
+    "                \"total_paid\",\n",
+    "                # \"total_incurred\",\n",
+    "                # \"total_alae\",\n",
+    "                # \"total_loss\"\n",
+    "            ],\n",
     "            \"export_data\": \"raw\",  # aggregated\n",
     "        },\n",
     "    }\n",
@@ -211,7 +224,7 @@
     "\n",
     "    TARGET_LOSS_METRICS = capitalize_words_in_list(TARGET_LOSS_METRICS)\n",
     "\n",
-    "    return (Y_AXIS_DATE_FIELDS[:1], TARGET_LOSS_METRICS, TIME_INTERVALS)"
+    "    return (Y_AXIS_DATE_FIELDS, TARGET_LOSS_METRICS, TIME_INTERVALS)"
    ]
   },
   {
@@ -998,7 +1011,7 @@
     "    # This condition will be deprecated when the unit tests are built\n",
     "    if USE_STATIC_DATA:\n",
     "        # Unit Test Static Data\n",
-    "        BOOK = \"AVT\"\n",
+    "        BOOK = \"King\"\n",
     "        FULL_CLAIMS_DF = get_static_data(BOOK)\n",
     "\n",
     "        # Mock Variables\n",
